Fix alignment and add dental specialist button

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -14,7 +14,7 @@
   .sup {
     height: 90%;
     z-index: 1;
-    opacity: 0.05;
+    opacity: 0.1;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -29,6 +29,7 @@
 
     > div {
       height: 100%;
+      padding: 0 60px 0 24px;
     }
 
     img {
@@ -43,9 +44,6 @@
   }
 
   .message {
-    // p {
-    //   text-align: center;
-    // }
 
     img {
       width: 100%;
